--- a/resources/skins.minerva.footerV2.styles/common.less
+++ b/resources/skins.minerva.footerV2.styles/common.less
@@ -3,6 +3,10 @@
 
 .feature-footer-v2 {
 	background-color: @chromeColor;
+
+	#mw-mf-page-center {
+		background-color: @chromeColor;
+	}
 }
 
 .mw-body {
